WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232192
LFC][IFC] Unexpected content wrap when the containing block width is relative (take 2)
https://bugs.webkit.org/show_bug.cgi?id=232192
Summary
LFC][IFC] Unexpected content wrap when the containing block width is relative...
alan
Reported
2021-10-22 18:54:45 PDT
make
https://trac.webkit.org/changeset/279678/webkit
a bit more generic to cover more cases
Attachments
Patch
(10.36 KB, patch)
2021-10-22 21:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch with dependencies
(15.51 KB, patch)
2021-10-22 21:14 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.32 KB, patch)
2021-10-23 09:33 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.43 KB, patch)
2021-10-23 11:27 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-10-22 21:13:29 PDT
Created
attachment 442249
[details]
Patch
alan
Comment 2
2021-10-22 21:14:18 PDT
Created
attachment 442250
[details]
Patch with dependencies
alan
Comment 3
2021-10-23 09:33:15 PDT
Created
attachment 442265
[details]
Patch
alan
Comment 4
2021-10-23 11:27:28 PDT
Created
attachment 442268
[details]
Patch
EWS
Comment 5
2021-10-23 14:05:35 PDT
Committed
r284747
(
243456@main
): <
https://commits.webkit.org/243456@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442268
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-10-23 14:06:19 PDT
<
rdar://problem/84582532
>
Darin Adler
Comment 7
2021-10-23 22:26:46 PDT
Comment on
attachment 442249
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=442249&action=review
> Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:717 > + availableWidthForContent += LayoutUnit::epsilon();
Is this a full solution or only a partial workaround? Always exactly one epsilon, never accumulates twice?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug