LFC][IFC] Unexpected content wrap when the containing block width is relative (take 2) https://bugs.webkit.org/show_bug.cgi?id=232192

Reviewed by Antti Koivisto.

Source/WebCore:

This is a more generic workaround (see r279678) for the block vs. inline measuring issue
where the block width is stored in a LayoutUnit while the inline layout uses float exclusively.
The implicit float flooring at computing the block width may produce an unexpectedly short available space.
e.g
  <div style="font-family: Monospace; width: 3ch; overflow-wrap: anywhere">foobar</div>

  assume the resolved 3ch is: 17.79999999px (float).
  It should allow us to put [foo] on the first line.
  However during a float -> LayoutUnit conversion, the resolved value becomes 17.79px.
  This floored value leads to an early, unexpected breaking position at [fo].

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processInlineContent):
(WebCore::Layout::InlineContentBreaker::processOverflowingContentWithText const):
* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::handleFloatContent):
(WebCore::Layout::availableWidth):
(WebCore::Layout::LineBuilder::handleInlineContent):
(WebCore::Layout::LineBuilder::rebuildLineForTrailingSoftHyphen):

LayoutTests:

* TestExpectations:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/243456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284747 268f45cc-cd09-0410-ab3c-d52691b4dbfc